Changed to volksport content

--- a/index.html
+++ b/index.html
@@ -20,18 +20,20 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-       
+
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                <p>The Volkssport Association of British Columbia (VABC) serves to unify the BC volkssport clubs and to promote their mutual cooperation, all within the Canadian Volkssport Federation (CVF). We are a non-profit organization dedicated to promoting healthy, non-competitive volkssport activities for people of all ages throughout the province. Although volkssporting activities include walking, swimming, cross-country skiing and cycling, walking events are the most popular among volkssporters in BC.</p>
             </div>
             <div class="div-2">
-                Div 2
+                <p>There are six clubs in British Columbia, offering a wide variety of walks.  Walks include parks, forests,  urban streets and trails, and glorious lake and ocean views. In addition, VABC is responsible for over 30 other walks spread throughout the province. We invite walkers of all ages to join us on a walk. New members are welcome, but membership is not mandatory in order to join one of our walks. We'd love to meet you! And your first five walks are free! After that the cost is just $1 or $2 per walk</p>
             </div>
             <div class="div-3">
-                Div 3
+                <p>In November 2019, Garden City Wanderers and Juan de Fuca Pathfinders members decided to amalgamate the two clubs into a single club with the name Victoria Pathfinders Walking Club, VPWC.
+
+Effective July 1, 2020, the two clubs have completed the  transition process whereby all of their walks, events and PTs, membership and assets have been transferred to  VPWC.  VPWC is now fully operational administering the complete integrated walk program of the two clubs which have now ceased to operate. Going forward, there will be a single Volkssport Club in Victoria, the Victoria Pathfinders Walking Club.</p>
             </div>
-        </section>    
+        </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
