--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         <![endif]-->
 
         <section class="wrapper">
+          <header>
+            <h1>Volkssport Association of British Columbia</h1>
+            <p>
+Good News! Some clubs have begun to plan group events that are consistent with the requirements and recommendations of the local health authorities. For the latest information in your area, please contact your local club or VABC President, Brenda Dudfield.</p>
+          </header>
             <div class="div-1">
                 <p>The Volkssport Association of British Columbia (VABC) serves to unify the BC volkssport clubs and to promote their mutual cooperation, all within the Canadian Volkssport Federation (CVF). We are a non-profit organization dedicated to promoting healthy, non-competitive volkssport activities for people of all ages throughout the province. Although volkssporting activities include walking, swimming, cross-country skiing and cycling, walking events are the most popular among volkssporters in BC.</p>
             </div>
@@ -33,6 +38,9 @@
 
 Effective July 1, 2020, the two clubs have completed the  transition process whereby all of their walks, events and PTs, membership and assets have been transferred to  VPWC.  VPWC is now fully operational administering the complete integrated walk program of the two clubs which have now ceased to operate. Going forward, there will be a single Volkssport Club in Victoria, the Victoria Pathfinders Walking Club.</p>
             </div>
+            <footer>
+              <p>We look forward to seeing you soon!</p>
+            </footer>
         </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
